logs/umilandez.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/landez'...
Compiling './lib/python3.5/site-packages/landez/cache.py'...
***   File "./lib/python3.5/site-packages/landez/cache.py", line 14
    def tile_file(self, (z, x, y)):
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/landez/proj.py'...
***   File "./lib/python3.5/site-packages/landez/proj.py", line 70
    def tile_bbox(self, (z, x, y)):
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/landez/sources.py'...
***   File "./lib/python3.5/site-packages/landez/sources.py", line 73
    except (sqlite3.OperationalError, sqlite3.DatabaseError), e:
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/landez/tiles.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (tiles.py, line 126)
Listing './lib/python3.5/site-packages/mbutil'...
Compiling './lib/python3.5/site-packages/mbutil/util.py'...
***   File "./lib/python3.5/site-packages/mbutil/util.py", line 32
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mbutil/util_import.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (util_import.py, line 152)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/umilandez-2.0.3.dev0.egg-info'...
Listing './lib/python3.5/site-packages/umimbutil-0.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
